# Cpp_Labs

./: .gitignore  CMakeLists.txt  main.cpp
project/: main.cpp
zad1/: fraction.cpp  fraction.h  main2.cpp
zad1/tests/: fractionTests.cpp
zad2/: main.cpp  matrix.cpp  matrix.h
zad2/tests/: matrixTests.cpp
zad3/: CMakeLists.txt  Dockerfile  fraction.cpp  fraction.h  main.cpp  vector.cpp  vector.h
zad3/tests/: CMakeLists.txt  vectorTests.cpp
zad4/: CMakeLists.txt  Dockerfile  circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.h  shapecomposite.cpp  shapecomposite.h
zad4/tests/: shapesTests.cpp
zad5/: main.cpp  myList.h  mySorting.h
zad5/tests/: CMakeLists.txt  MyListTests.cpp  MySortTests.cpp
zad6/: main.cpp  mystring.cpp  mystring.h
zad6/tests/: myStringTests.cpp
