cmake_minimum_required(VERSION 3.21)
project(untitled1)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled1 main.cpp zad4/rectangle.cpp zad4/rectangle.h zad4/circle.cpp zad4/circle.h zad4/ShapeComposite.h zad4/ShapeComposite.cpp zad5/myList.h zad5/mySorting.h project/main.cpp project/snake.h zad6/mystring.cpp zad6/mystring.h)

